Fix: Correct script path and improve CEP lookup functionality with better error handling

--- a/projeto_framework_/projeto_frameworkv1/atividade2/index.html
+++ b/projeto_framework_/projeto_frameworkv1/atividade2/index.html
@@ -36,6 +36,6 @@
   </form>
   <pre id="log" class="mt-3 p-2 bg-light"></pre>
 </div>
-<script src="atividade2/controller.js"></script>
+<script src="controller.js"></script>
 </body>
 </html>
